# super-base-system

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  super-base-implementation-strategy.md  优化机制.md  项目构建难点解析.md
evaluations/datasets/: intent_eval.yaml
evaluations/runners/: intent_eval.py
gateway/: Dockerfile  pyproject.toml
gateway/app/: config.py  main.py
gateway/app/api/: chat.py
gateway/app/db/: __init__.py  engine.py  factory.py  models.py
gateway/app/dispatcher/: http_dispatcher.py
gateway/app/executor/: dag_executor.py
gateway/app/intent/: cloud_classifier.py  complexity.py  mock_classifier.py  router.py
gateway/app/memory/: __init__.py  chunker.py  embedding.py  factory.py  ltm.py  manager.py  rag.py  redis_stm.py  stm.py
gateway/app/observability/: __init__.py  metrics.py  tracing.py
gateway/app/planner/: condition_evaluator.py  dag.py  planner.py
gateway/app/prompts/: intent_prompt.py
gateway/app/registry/: store.py
gateway/app/resilience/: circuit_breaker.py  dead_letter.py  pg_dlq.py
gateway/app/session/: manager.py  pg_repository.py
gateway/app/tenant/: __init__.py  middleware.py
gateway/app/transport/: nats_bus.py  sse.py
modules/code-review/: Dockerfile  main.py  module_manifest.yaml  pyproject.toml
tests/: e2e_phase2.py  e2e_run.py  test_complexity.py  test_condition_evaluator.py  test_dag.py  test_e2e.py  test_human_gate.py  test_intent.py  test_ltm.py  test_memory_m3.py  test_observability.py  test_registry.py  test_resilience.py  test_session.py  test_stm.py  test_tenant.py
(+17 files in other folders)
