[project]
name = "superbase-gateway"
version = "0.1.0"
description = "Super Base System - Gateway (Dispatch Layer)"
requires-python = ">=3.11"
dependencies = [
    "superbase-sdk",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-client>=0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
